src/app/components/sign-up/sign-up.component.scss
.sign-up-card {
    width: 100%;
    height: 100%;
    background-color: #5A72EE;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .welcome-heading {
        color: white;
    }

    .error-text-styles {
        color: red;
        font-weight: 500;
    }

    .card {
        width: 100%;
        max-width: 25rem;
        display: flex;
        flex-direction: column;
        background-color: white;
        border-radius: 0.3rem;

        .card-header {
            display: flex;
            justify-content: center;
        }

            .flex-column {
                display: flex;
                flex-direction: column;
    
                .form-label {
                    width: 100%;
                    max-width: 17rem;
                    margin: 0.25rem auto;
                }
                  
                .form-input {
                    border-radius: 0.25rem;
                    background-color: #fff; /* White */
                    padding: 10px;
                    width: 100%;
                    max-width: 16rem;
                    margin: 0.25rem auto;
                }

                .normal-border {
                    border: 1px solid #ccc; /* Light gray border */
                }

                .red-border {
                    border: 1px solid red;
                }

                .error-div {
                    margin: 0.2rem auto;
                    align-self: center;
                }
            }

            .password-match-error-div {
                margin: 0.2rem auto;
                text-align: center;
            }
    
            .signup-button {
                background-color: #0d6efd;
                width: 30%;
                margin: 1rem auto;
                padding: 0.5rem;
                border: none;
                border-radius: 0.25rem;
                font-size: 1.1rem;
                color: white;
                display: flex;
                justify-content: center;
            }
            
            #signup-help {
                text-align: center;
                margin: 0 auto 1rem;
            }
    }
}

